fixed collapsed badges

--- a/app/client/styles/layout/main/_main.scss
+++ b/app/client/styles/layout/main/_main.scss
@@ -8,42 +8,6 @@
   display: none;
 }
 
-.p-20 {
-  padding: 20px;
-}
-
-.m-20 {
-  margin: 20px;
-}
-
-.m-t-30 {
-  margin-top: 30px;
-}
-
-.column {
-  max-width: 450px;
-  margin: 0 auto !important;
-}
-
-.m-t-p-15 {
-  margin-top: 15%;
-}
-
-.grey-background {
-  background-color: #DADADA;
-  width: 100%;
-  height: 100%;
-}
-
-.width-p90 {
-  width: 90%;
-}
-
-.no-data-found {
-  font-size: 18px;
-  color: darkgray;
-}
-
 .main-section {
   display: flex;
   height: calc(100% - 80px);
